* Mon Jul 30 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.2.0
- added take ownership

* Mon Jul 23 2018 Chris Tessmer <chris.tessemr@onyxpoint.com> - 0.1.0
- initial module