@@ -1,63 +1,234 @@
+# The testing matrix considers ruby/puppet versions supported by SIMP and PE:
 #
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
+# ------------------------------------------------------------------------------
+# Release       Puppet   Ruby   EOL
+# SIMP 6.1      4.10.6   2.1.9  TBD
+# SIMP 6.2      4.10.12  2.1.9  TBD
+# PE 2016.4.15  4.10.12  2.1.9  2018-12 (LTS)
+# PE 2017.3.10  5.3.8    2.4.4  2018-12 (STS)
+# SIMP 6.3      5.5.7    2.4.4  TBD***
+# PE 2018.1     5.5.6    2.4.4  2020-05 (LTS)***
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
 ---
-cache:
-  paths:
-    - vendor
-    - .bundle
-puppet-syntax:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.1
-  script:
-    - bundle install
-    - bundle exec rake syntax
-puppet-lint:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.1
-  script:
-    - bundle install
-    - bundle exec rake lint
-puppet-metadata:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.1
-  script:
-    - bundle install
-    - bundle exec rake metadata
-unit-test-ruby-2.1:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.1
-  script:
-    - bundle install
-    - bundle exec rake spec
-unit-test-ruby-2.2:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.2
+stages:
+  - 'sanity'
+  - 'validation'
+  - 'acceptance'
+  - 'compliance'
+  - 'deployment'
+
+image: 'ruby:2.4'
+
+variables:
+  PUPPET_VERSION:    'UNDEFINED' # <- Matrixed jobs MUST override this (or fail)
+  BUNDLER_VERSION:   '1.16.1'
+
+  # Force dependencies into a path the gitlab-runner user can write to.
+  # (This avoids some failures on Runners with misconfigured ruby environments.)
+  GEM_HOME:          .vendor/gem_install
+  BUNDLE_CACHE_PATH: .vendor/bundle
+  BUNDLE_PATH:       .vendor/bundle
+  BUNDLE_BIN:        .vendor/gem_install/bin
+  BUNDLE_NO_PRUNE:   'true'
+
+
+# bundler dependencies and caching
+#
+# - Cache bundler gems between pipelines foreach Ruby version
+# - Try to use cached and local resources before downloading dependencies
+# --------------------------------------
+.setup_bundler_env: &setup_bundler_env
+  cache:
+    untracked: true
+    key: "${CI_PROJECT_NAMESPACE}_ruby-${MATRIX_RUBY_VERSION}_bundler"
+    paths:
+      - '.vendor'
+  before_script:
+    - 'ruby -e "puts %(Environment Variables:\n  * #{ENV.keys.grep(/PUPPET|SIMP|BEAKER|MATRIX/).map{|v| %(#{v} = #{ENV[v]})}.join(%(\n  * ))})"'
+    - 'declare GEM_BUNDLER_VER=(-v "~> ${BUNDLER_VERSION:-1.16.0}")'
+    - 'declare GEM_INSTALL_CMD=(gem install --no-document)'
+    - 'declare BUNDLER_INSTALL_CMD=(bundle install --no-binstubs --jobs $(nproc) "${FLAGS[@]}")'
+    - 'mkdir -p ${GEM_HOME} ${BUNDLER_BIN}'
+    - 'gem list -ie "${GEM_BUNDLER_VER[@]}" --silent bundler || "${GEM_INSTALL_CMD[@]}" --local "${GEM_BUNDLER_VER[@]}" bundler || "${GEM_INSTALL_CMD[@]}" "${GEM_BUNDLER_VER[@]}" bundler'
+    - 'rm -rf pkg/ || :'
+    - 'bundle check || rm -f Gemfile.lock && ("${BUNDLER_INSTALL_CMD[@]}" --local || "${BUNDLER_INSTALL_CMD[@]}" || bundle pristine ||  "${BUNDLER_INSTALL_CMD[@]}") || echo "PIPELINE: Bundler could not find everything"'
+
+# To avoid running a prohibitive number of tests every commit,
+# don't set this env var in your gitlab instance
+.only_with_SIMP_FULL_MATRIX: &only_with_SIMP_FULL_MATRIX
+  only:
+    variables:
+      - $SIMP_FULL_MATRIX
+
+# Puppet Versions
+#-----------------------------------------------------------------------
+
+.pup_4: &pup_4
+  image: 'ruby:2.4'
+  variables:
+    PUPPET_VERSION: '~> 4.0'
+    MATRIX_RUBY_VERSION: '2.1'
+
+.pup_4_10: &pup_4_10
+  image: 'ruby:2.1'
+  variables:
+    PUPPET_VERSION: '~> 4.10.4'
+    MATRIX_RUBY_VERSION: '2.1'
+
+.pup_5: &pup_5
+  image: 'ruby:2.4'
+  variables:
+    PUPPET_VERSION: '~> 5.0'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
+    MATRIX_RUBY_VERSION: '2.4'
+
+.pup_5_3: &pup_5_3
+  image: 'ruby:2.4'
+  variables:
+    PUPPET_VERSION: '~> 5.3.0'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
+    MATRIX_RUBY_VERSION: '2.4'
+
+# Puppet for SIMP 6.3, PE is at 5.5.6 but close enough
+.pup_5_5_7: &pup_5_5_7
+  image: 'ruby:2.4'
+  variables:
+    PUPPET_VERSION: '5.5.7'
+    BEAKER_PUPPET_COLLECTION: 'puppet5'
+    MATRIX_RUBY_VERSION: '2.4'
+
+# Experimental
+#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+.pup_6: &pup_6
   allow_failure: true
+  image: 'ruby:2.4'
+  variables:
+    PUPPET_VERSION: '~> 6.0'
+    BEAKER_PUPPET_COLLECTION: 'puppet6'
+    MATRIX_RUBY_VERSION: '2.4'
+
+# Testing Environments
+#-----------------------------------------------------------------------
+
+.lint_tests: &lint_tests
+  stage: 'validation'
+  tags: ['docker']
+  <<: *setup_bundler_env
   script:
-    - bundle install
-    - bundle exec rake spec
-unit-test-ruby-2.3:
-  stage: test
-  tags:
-    - docker
-  image: ruby:2.3
-  allow_failure: true
+    - 'bundle exec rake syntax'
+    - 'bundle exec rake lint'
+    - 'bundle exec rake metadata_lint'
+
+.unit_tests: &unit_tests
+  stage: 'validation'
+  tags: ['docker']
+  <<: *setup_bundler_env
   script:
-    - bundle install
-    - bundle exec rake spec
-acceptance-test:
-  stage: test
-  tags:
-    - beaker
+    - 'bundle exec rake spec'
+
+.acceptance_tests: &acceptance_tests
+  stage: 'acceptance'
+  tags: ['beaker']
+  <<: *setup_bundler_env
+
+.compliance_tests: &compliance_tests
+  stage: 'compliance'
+  tags: ['beaker']
+  <<: *setup_bundler_env
+
+
+# Pipeline / testing matrix
+#=======================================================================
+
+sanity_checks:
+  <<: *pup_5
+  <<: *setup_bundler_env
+  stage: 'sanity'
+  tags: ['docker']
   script:
-    - bundle install --no-binstubs --path=vendor
-    - bundle exec rake acceptance
+    - 'if `hash apt-get`; then apt-get update; fi'
+    - 'if `hash apt-get`; then apt-get install -y rpm; fi'
+    - 'bundle exec rake check:dot_underscore'
+    - 'bundle exec rake check:test_file'
+    - 'bundle exec rake pkg:check_version'
+    - 'bundle exec rake pkg:compare_latest_tag'
+    - 'bundle exec rake pkg:create_tag_changelog'
+    - 'bundle exec puppet module build'
+
+# Linting
+#-----------------------------------------------------------------------
+
+pup4-lint:
+  <<: *pup_4_10
+  <<: *lint_tests
+
+pup5-lint:
+  <<: *pup_5
+  <<: *lint_tests
+
+pup6-lint:
+  <<: *pup_6
+  <<: *lint_tests
+
+# Unit Tests
+#-----------------------------------------------------------------------
+
+pup4.10-unit:
+  <<: *pup_4_10
+  <<: *unit_tests
+
+pup5-unit:
+  <<: *pup_5
+  <<: *unit_tests
+
+pup5_3-unit:
+  <<: *pup_5_3
+  <<: *unit_tests
+
+pup5.5.7-unit:
+  <<: *pup_5_5_7
+  <<: *unit_tests
+
+pup6-unit:
+  <<: *pup_6
+  <<: *unit_tests
+
+# Acceptance Tests
+#-----------------------------------------------------------------------
+
+pup4.10:
+  <<: *pup_4_10
+  <<: *acceptance_tests
+  script:
+    - 'bundle exec rake beaker:suites'
+
+pup4.10-fips:
+  <<: *pup_4_10
+  <<: *acceptance_tests
+  <<: *only_with_SIMP_FULL_MATRIX
+  script:
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites'
+
+pup5.5.7:
+  <<: *pup_5_5_7
+  <<: *acceptance_tests
+  script:
+    - 'bundle exec rake beaker:suites'
+
+pup5.5.7-fips:
+  <<: *pup_5_5_7
+  <<: *acceptance_tests
+  script:
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites'
+
+# No OEL test yet
+#pup5.5.7-oel:
+#  <<: *pup_5_5_7
+#  <<: *acceptance_tests
+#  script:
+#    - 'bundle exec rake beaker:suites[default,oel]'
