@@ -1,0 +1,20 @@
+.*.sw?
+.yardoc
+dist/
+pkg/
+spec/acceptance/
+spec/fixtures/
+spec/rp_env/
+!/spec/hieradata/default.yaml
+!/spec/fixtures/site.pp
+.rspec_system
+.vagrant/
+.bundle/
+Gemfile.lock
+vendor/
+junit/
+log/
+doc/
+tests/
+spec/
+
