@@ -1,4 +1,7 @@
-* Mon Jul 30 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.2.0
+* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 0.1.0
+- Update to Hiera 5
+
+* Mon Jul 30 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.1.0
 - added take ownership
 
 * Mon Jul 23 2018 Chris Tessmer <chris.tessemr@onyxpoint.com> - 0.1.0
